# LearnOpenGL-C

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
dependencies/: array.h
glad/include/glad/: glad.h
glad/src/: glad.c
resources/shaders/: geom_explode.frag  geom_explode.geom  geom_explode.vert  geom_normal_visual.frag  geom_normal_visual.geom  geom_normal_visual.vert  light.vert  light_multi.frag  light_single.frag  model.frag  model.vert  quad_texture.frag  quad_texture.vert  single_color.frag  single_color.vert  skybox.frag  skybox.vert
src/: camera.c  camera.h  framebuffer.c  framebuffer.h  main.c  mesh.c  mesh.h  model.c  model.h  shader.c  shader.h  util.c  util.h
src/assimp/: mesh.c  mesh.h  model.c  model.h
